--- a/examples/advanced/package.json
+++ b/examples/advanced/package.json
@@ -15,8 +15,7 @@
     "react": "16.13.0",
     "react-dom": "16.13.0",
     "react-redux": "7.2.0",
-    "redux": "4.0.5",
-    "redux-saga": "1.1.3"
+    "redux": "4.0.5"
   },
   "devDependencies": {
     "@babel/core": "7.8.7",
