--- a/examples/redux-act-integration/package.json
+++ b/examples/redux-act-integration/package.json
@@ -16,8 +16,7 @@
     "react-dom": "16.13.0",
     "react-redux": "7.2.0",
     "redux": "4.0.5",
-    "redux-act": "1.7.7",
-    "redux-saga": "1.1.3"
+    "redux-act": "1.7.7"
   },
   "devDependencies": {
     "@babel/core": "7.8.7",
