--- a/packages/redux-saga-requests-promise/package.json
+++ b/packages/redux-saga-requests-promise/package.json
@@ -26,7 +26,7 @@
     "lint": "eslint 'src/**'",
     "test": "jest src",
     "test:cover": "jest --coverage src",
-    "test-types": "tsc types/index.d.spec.ts --noEmit --lib es2015",
+    "test-types": "tsc types/index.d.spec.ts --noEmit --lib es2015,DOM",
     "build:commonjs": "cross-env BABEL_ENV=test babel src --out-dir lib --ignore 'src/**/*.spec.js'",
     "build:es": "cross-env babel src --out-dir es --ignore 'src/**/*.spec.js'",
     "build:umd": "webpack --mode development -o dist/redux-saga-requests-promise.js",
