--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,10 @@
 {
   "version": "independent",
   "npmClient": "yarn",
-  "useWorkspaces": true
+  "useWorkspaces": true,
+  "command": {
+    "publish": {
+      "ignoreChanges": ["**/node_modules/**"]
+    }
+  }
 }
