--- a/packages/redux-requests-react/package.json
+++ b/packages/redux-requests-react/package.json
@@ -50,7 +50,7 @@
     "@babel/plugin-transform-runtime": "7.8.3",
     "@babel/preset-env": "7.8.7",
     "@babel/preset-react": "7.8.3",
-    "@redux-requests/core": "^0.28.1",
+    "@redux-requests/core": ">=0.28.1",
     "@types/react": "16.9.23",
     "babel-jest": "25.1.0",
     "babel-loader": "8.0.6",
